==> Stapimaz/cs_p1/GD32VW55X_Wifi_BLE_SDK/GD32VW55x_RELEASE_V1.0.2/MSDK/cloud/tuya/tuyaos_adapter/src/tkl_i2c.c <==
#include "gd32vw55x.h"
#include "tkl_i2c.h"
#include "gd32vw55x_i2c.h"
#include "gd32vw55x_it.h"
#include "tuya_error_code.h"

OPERATE_RET tkl_i2c_init(TUYA_I2C_NUM_E port, CONST TUYA_IIC_BASE_CFG_T *cfg)
{
    // --- BEGIN: user implements ---
    UINT32_T i2c_port = i2c_port_transfer(port);

    /* enable GPIOA clock */
    rcu_periph_clock_enable(RCU_GPIOA);
    /* enable I2C1 clock */
    rcu_periph_clock_enable(RCU_I2C1);

    if (i2c_port == I2C0) {
        i2c0_gpio_config();
    } else if (i2c_port == I2C1) {
        i2c1_gpio_config();
    } else {
        return OPRT_OS_ADAPTER_I2C_INVALID_PARM;
    }

    if (cfg->speed == TUYA_IIC_BUS_SPEED_100K) {
        i2c_timing_config(i2c_port, 1, 0xA, 0);
        i2c_master_clock_config(i2c_port, 0x0, 0xE9);
    } else if (cfg->speed == TUYA_IIC_BUS_SPEED_400K) {
        i2c_timing_config(i2c_port, 0, 0x8, 0);
        i2c_master_clock_config(i2c_port, 0x30, 0x91);
    } else if (cfg->speed == TUYA_IIC_BUS_SPEED_1M) {
        i2c_timing_config(i2c_port, 0, 0x4, 0);
        i2c_master_clock_config(i2c_port, 0x14, 0x35);
    } else if (cfg->speed == TUYA_IIC_BUS_SPEED_3_4M) {
        return OPRT_OS_ADAPTER_I2C_INVALID_PARM;
    }

    if (cfg->addr_width == TUYA_IIC_ADDRESS_7BIT) {
        addr_width = 7;
    } else {
        addr_width = 10;
    }

    return OPRT_OK;
    // --- END: user implements ---
}

OPERATE_RET tkl_i2c_deinit(TUYA_I2C_NUM_E port)
{
    // --- BEGIN: user implements ---
    i2c_deinit(i2c_port_transfer(port));
    return OPRT_OK;
    // --- END: user implements ---
}

OPERATE_RET tkl_i2c_master_send(TUYA_I2C_NUM_E port, UINT16_T dev_addr, CONST VOID_T *data, UINT32_T size, BOOL_T xfer_pending)
{
    // --- BEGIN: user implements ---
    UINT32_T i2c_port = i2c_port_transfer(port);
    UINT8_T i;
    UINT32_T *data_transmit = (UINT32_T *)data;


    if (addr_width == 10) {
        /* enable 10-bit addressing mode in master mode */
        i2c_address10_enable(i2c_port);
        /* configure I2C address */
        i2c_address_config(i2c_port, dev_addr, I2C_ADDFORMAT_10BITS);
    } else if (addr_width == 7) {
        /* configure I2C address */
        i2c_address_config(i2c_port, dev_addr, I2C_ADDFORMAT_7BITS);
    }

    i2c_transfer_byte_number_config(i2c_port, size);
    /* enable I2C */
    i2c_enable(i2c_port);

    /* wait until I2C bus is idle */
    while(i2c_flag_get(i2c_port, I2C_FLAG_I2CBSY));
    /* send a start condition to I2C bus */
    i2c_start_on_bus(i2c_port);
    /* wait until the transmit data buffer is empty */
    I2C_STAT(i2c_port) |= I2C_STAT_TBE;
    while(!i2c_flag_get(i2c_port, I2C_FLAG_TBE));

    for (i = 0; i < size; i++) {
        /* data transmission */
        i2c_data_transmit(i2c_port, data_transmit[i]);
        /* wait until the TI bit is set */
        while(!i2c_flag_get(i2c_port, I2C_FLAG_TI));
    }

    /* wait for transfer complete flag */
    while(!i2c_flag_get(i2c_port, I2C_FLAG_TC));
    /* send a stop condition to I2C bus */
    i2c_stop_on_bus(i2c_port);
    /* wait until stop condition generate */
    while(!i2c_flag_get(i2c_port, I2C_FLAG_STPDET));
    /* clear the STPDET bit */
    i2c_flag_clear(i2c_port, I2C_FLAG_STPDET);

    return OPRT_OK;
    // --- END: user implements ---
}

OPERATE_RET tkl_i2c_master_receive(TUYA_I2C_NUM_E port, UINT16_T dev_addr, VOID *data, UINT32_T size, BOOL_T xfer_pending)
{
    // --- BEGIN: user implements ---
    UINT32_T i2c_port = i2c_port_transfer(port);
    UINT8_T i;
    UINT32_T *data_receive = (UINT32_T *)data;

    if (addr_width == 10) {
        /* enable 10-bit addressing mode in master mode */
        i2c_address10_enable(i2c_port);
        /* configure I2C address */
        i2c_address_config(i2c_port, dev_addr, I2C_ADDFORMAT_10BITS);
    } else if (addr_width == 7) {
        /* configure I2C address */
        i2c_address_config(i2c_port, dev_addr, I2C_ADDFORMAT_7BITS);
    }

    /* configure slave address */
    i2c_master_addressing(i2c_port, dev_addr, I2C_MASTER_RECEIVE);
    i2c_transfer_byte_number_config(i2c_port, size);
    /* enable I2C */
    i2c_enable(i2c_port);

    /* wait until I2C bus is idle */
    while(i2c_flag_get(i2c_port, I2C_FLAG_I2CBSY));
    /* send a start condition to I2C bus */
    i2c_start_on_bus(i2c_port);

    for (i = 0; i < size; i++) {
        /* wait until the RBNE bit is set */
        while(!i2c_flag_get(i2c_port, I2C_FLAG_RBNE));
        /* read a data from I2C_DATA */
        data_receive[i] = i2c_data_receive(i2c_port);
    }
    while(!i2c_flag_get(i2c_port, I2C_FLAG_TC));
    /* send a stop condition to I2C bus */
    i2c_stop_on_bus(i2c_port);
    /* wait until stop condition generate */
    while(!i2c_flag_get(i2c_port, I2C_FLAG_STPDET));
    /* clear the STPDET bit */
    i2c_flag_clear(i2c_port, I2C_FLAG_STPDET);

    return OPRT_OK;
    // --- END: user implements ---
}
