==> tuya/TuyaOpen-esp32/tuya_open_sdk/tuyaos_adapter/src/drivers/tkl_i2c.c <==
#include "tkl_i2c.h"
#include "tkl_pinmux.h"
#include "esp_err.h"
#include "esp_log.h"
#include "driver/gpio.h"
#include "driver/i2c_master.h"
#include "driver/i2c_types.h"
#define TAG "tkl_i2c"
#define I2C_DEVICE_MAX_NUM (5)

OPERATE_RET tkl_i2c_init(TUYA_I2C_NUM_E port, const TUYA_IIC_BASE_CFG_T *cfg)
{
    esp_err_t esp_rt = ESP_OK;
    uint8_t i = 0;

    if (port >= TUYA_I2C_NUM_MAX || cfg == NULL) {
        return OPRT_INVALID_PARM;
    }

    if (i2c_bus[port] == NULL) {    // i2c bus not init
        for (i = 0; i < I2C_DEVICE_MAX_NUM; i++) {
            i2c_bus[port] = NULL;
            sg_i2c_dev_map[port][i].i2c_dev_handle = NULL;
            memset(&sg_i2c_dev_map[port][i].i2c_dev_cfg, 0, sizeof(i2c_device_config_t));
        }
    }

    for (i = 0; i < I2C_DEVICE_MAX_NUM; i++) {
        if (0 == sg_i2c_dev_map[port][i].i2c_dev_cfg.scl_speed_hz) {
            switch (cfg->speed) {
                case TUYA_IIC_BUS_SPEED_100K:
                    sg_i2c_dev_map[port][i].i2c_dev_cfg.scl_speed_hz = 100000;
                    break;
                case TUYA_IIC_BUS_SPEED_400K:
                    sg_i2c_dev_map[port][i].i2c_dev_cfg.scl_speed_hz = 400000;
                    break;
                case TUYA_IIC_BUS_SPEED_1M:
                    sg_i2c_dev_map[port][i].i2c_dev_cfg.scl_speed_hz = 1000000;
                    break;
                case TUYA_IIC_BUS_SPEED_3_4M:
                    sg_i2c_dev_map[port][i].i2c_dev_cfg.scl_speed_hz = 3400000;
                    break;
                default:
                    sg_i2c_dev_map[port][i].i2c_dev_cfg.scl_speed_hz = 100000;
                    break;
            }
            if (cfg->addr_width == TUYA_IIC_ADDRESS_7BIT) {
                sg_i2c_dev_map[port][i].i2c_dev_cfg.dev_addr_length = I2C_ADDR_BIT_LEN_7;
            } else {
                sg_i2c_dev_map[port][i].i2c_dev_cfg.dev_addr_length = I2C_ADDR_BIT_LEN_10;
            }
            break;
        }
    }
    // initialize i2c bus
    i2c_master_bus_config_t i2c_bus_cfg = {
        .i2c_port = port,
        .sda_io_num = sg_i2c_pin[port].sda,
        .scl_io_num = sg_i2c_pin[port].scl,
        .clk_source = I2C_CLK_SRC_DEFAULT,
        .glitch_ignore_cnt = 7,
        .intr_priority = 0,
        .trans_queue_depth = 0,
        .flags =
            {
                .enable_internal_pullup = 1,
            },
    };
    esp_rt = i2c_new_master_bus(&i2c_bus_cfg, &i2c_bus[port]);
    if (esp_rt != ESP_OK) {
        ESP_LOGE(TAG, "Failed to create I2C bus: %s", esp_err_to_name(esp_rt));
        return OPRT_COM_ERROR;
    }
    return OPRT_OK;
}

OPERATE_RET tkl_i2c_deinit(TUYA_I2C_NUM_E port)
{
    if (port >= TUYA_I2C_NUM_MAX) {
        return OPRT_INVALID_PARM;
    }
    
    i2c_del_master_bus(i2c_bus[port]);
    for (uint8_t i = 0; i < I2C_DEVICE_MAX_NUM; i++) {
        if (sg_i2c_dev_map[port][i].i2c_dev_handle == NULL) {
            continue;
        }
        ESP_ERROR_CHECK(i2c_master_bus_rm_device(sg_i2c_dev_map[port][i].i2c_dev_handle));
        sg_i2c_dev_map[port][i].i2c_dev_handle = NULL;
    }
    return OPRT_OK;
}

OPERATE_RET tkl_i2c_master_send(TUYA_I2C_NUM_E port, uint16_t dev_addr, const void *data, uint32_t size, BOOL_T xfer_pending)
{
    uint8_t i = 0;
    i2c_master_dev_handle_t dev_handle;

    if (port >= I2C_DEVICE_MAX_NUM || i2c_bus[port] == NULL) {
        return OPRT_INVALID_PARM;
    }

    for (i = 0; i < I2C_DEVICE_MAX_NUM; i++) {
        if (sg_i2c_dev_map[port][i].i2c_dev_handle == NULL) {   // Add an new device
            sg_i2c_dev_map[port][i].i2c_dev_cfg.device_address = dev_addr;                              
            ESP_ERROR_CHECK(i2c_master_bus_add_device(i2c_bus[port], &(sg_i2c_dev_map[port][i].i2c_dev_cfg), &dev_handle));
            sg_i2c_dev_map[port][i].i2c_dev_handle = dev_handle;
            break;
        } else {
            if (sg_i2c_dev_map[port][i].i2c_dev_cfg.device_address == dev_addr) {
                break;
            }
        }
    }

    ESP_ERROR_CHECK(i2c_master_transmit(sg_i2c_dev_map[port][i].i2c_dev_handle, data, size, -1));
    return OPRT_OK;
}

OPERATE_RET tkl_i2c_master_receive(TUYA_I2C_NUM_E port, uint16_t dev_addr, void *data, uint32_t size,
                                   BOOL_T xfer_pending)
{
    uint8_t i = 0;
    i2c_master_dev_handle_t dev_handle;

    if (port >= I2C_DEVICE_MAX_NUM || i2c_bus[port] == NULL) {
        return OPRT_INVALID_PARM;
    }

    for (i = 0; i < I2C_DEVICE_MAX_NUM; i++) {
        if (sg_i2c_dev_map[port][i].i2c_dev_handle == NULL) {   // Add an new device
            sg_i2c_dev_map[port][i].i2c_dev_cfg.device_address = dev_addr;                              
            ESP_ERROR_CHECK(i2c_master_bus_add_device(i2c_bus[port], &(sg_i2c_dev_map[port][i].i2c_dev_cfg), &dev_handle));
            sg_i2c_dev_map[port][i].i2c_dev_handle = dev_handle;
            break;
        } else {
            if (sg_i2c_dev_map[port][i].i2c_dev_cfg.device_address == dev_addr) {
                break;
            }
        }
    }

    ESP_ERROR_CHECK(i2c_master_receive(sg_i2c_dev_map[port][i].i2c_dev_handle, data, size, -1));
    return OPRT_OK;
}
